--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^7.2.4",
     "react-thunk": "^1.0.0",
     "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
